--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <img src="Images/face3.png" alt="Face 3">
             <div class="button-container">
                 <button><img src="Images/Button1.png" alt="Button 1"></button>
-                <button><img src="Images/BUtton2.png" alt="Button 2"></button>
+                <button><img src="Images/Button2.png" alt="Button 2"></button>
                 <button class="correct"><img src="Images/Button3.png" alt="Button 3"></button>
             </div>
         </section>
@@ -167,7 +167,7 @@
             <div class="button-container">
                 <button><img src="Images/Button4.png" alt="Button 4"></button>
                 <button class="correct"><img src="Images/Button6.png" alt="Button 6"></button>
-                <button><img src="Images/BUtton5.png" alt="Button 5"></button>        
+                <button><img src="Images/Button5.png" alt="Button 5"></button>        
             </div>
         </section>
         <section class="face-section">
@@ -178,7 +178,7 @@
             <div class="button-container">
                 <button class="correct"><img src="Images/Button9.png" alt="Button 9"></button>
                 <button><img src="Images/Button7.png" alt="Button 7"></button>
-                <button><img src="Images/BUtton8.png" alt="Button 8"></button>                
+                <button><img src="Images/Button8.png" alt="Button 8"></button>                
             </div>
         </section>
         <section class="face-section">
