--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <img src="Images/face3.png" alt="Face 3">
             <div class="button-container">
                 <button><img src="Images/Button1.png" alt="Button 1"></button>
-                <button><img src="Images/Button2.png" alt="Button 2"></button>
+                <button><img src="Images/BUtton2.png" alt="Button 2"></button>
                 <button class="correct"><img src="Images/Button3.png" alt="Button 3"></button>
             </div>
         </section>
